Refactor ClimbingRoad method.Delete (still not working) Refactor TopoMapper, DTO, Model, Manager for start shared parts, Finish to implement UserMessage methods in service Add UserMessageRepo methods & querry Refactor view in front, and somes ts.